# cyber-etl

./: .gitattributes  .gitignore  README.md  api_token.secret  api_token.secret.example  cve_node_data.feather  cve_references.feather  data_integration.ipynb  dse203_project_environment.yml  integration.ipynb  mitre_json_to_csv.py  parse_cve_data.py  parse_cve_json_data.py  pyproject.toml  requirements.txt  testing4.csv
alerts/: alert_cve_edge.csv  alert_ner.csv  alert_ner_edge.csv  alert_nodes.csv  cpe_product.ipynb  ner_cluster_id.csv  ner_node.csv  ner_training.json  parse_alert.ipynb  soup_alerts.pkl
data/: alert_cve_edge.csv  alert_cve_edge.feather  alert_ner.csv  alert_ner_edge.csv  alert_ner_label_weights.feather  alert_nodes.csv  alert_nodes.feather  alert_ttp_data.feather  contributors_00000.feather  contributors_00000_0.feather  contributors_00500.feather  contributors_01000.feather  contributors_01000_0.feather  contributors_02000.feather  contributors_03000.feather  contributors_initial.feather  cpe-dictionary-metadata_0.2.xsd  cpe_node_data.feather  cpe_product_edge.csv  cpe_product_edge.feather  cve_node_data.feather  cve_references.feather  enterprise-attack.csv  github_langs_final.feather  github_langs_initial.feather  github_usernames_final.feather  github_usernames_initial.feather  languages_00000.feather  languages_00000_0.feather  languages_00500.feather  languages_01000.feather  languages_01000_0.feather  languages_01500.feather  languages_02000.feather  languages_03000.feather  languages_final.feather  languages_initial.feather  ner_cluster.csv  ner_node.csv  ner_text2.pkl  (+5 more)
gitlinks/: gitapi.ipynb  gitapi.py  (+2 more)
