[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Chris Armstrong", email = "cparmstr@ucsd.edu"},
]
dependencies = [
    "pyarrow>=10.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
